tests/error/connect_except.gw
#! [contains] NullPtrException
UGen ref u;
adc => u;
